--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="loginbtn">LOGIN</string>
+    <string name="changelanguage">Change Language</string>
 </resources>
